node modules removed

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DATABASE_ACCESS="mongodb+srv://register:NujXpCi6UneHQiuo@cluster0.k3rkv.mongodb.net/userData?retryWrites=true&w=majority"
+AWS_ACCESS_KEY_ID="AKIASQI2FAVDU7I74XFA"
+AWS_SECRET_ACCESS_KEY="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"
