--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "mubashira",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1140.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
